# vulkano-text

./: Cargo.toml
src/: examples.rs  gfx.rs  main.rs
src/gfx/: camera.rs  model.rs  render.rs  text.rs  window.rs
src/gfx/render/: 3d_frag.glsl  3d_vert.glsl  sprite_vert.glsl  text2_frag.glsl  text_frag.glsl  text_vert.glsl  textq_frag.glsl
